samples/_failures_safe/1761089442_8bfe4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0953776.c: In function ‘main’:
./samples/SAFE/__tmp_c0953776.c:157:36: error: ‘num’ undeclared (first use in this function)
  157 |         if (choice < 1 || choice > num
      |                                    ^~~
./samples/SAFE/__tmp_c0953776.c:157:36: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c0953776.c:157:39: error: expected ‘)’ at end of input
  157 |         if (choice < 1 || choice > num
      |            ~                          ^
      |                                       )
./samples/SAFE/__tmp_c0953776.c:157:9: error: expected declaration or statement at end of input
  157 |         if (choice < 1 || choice > num
      |         ^~
./samples/SAFE/__tmp_c0953776.c:157:9: error: expected declaration or statement at end of input
